force-app/main/default/objects/Engagement__c/fields/Accounting_Status__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Status__c</fullName>
    <label>Accounting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>