force-app/main/default/objects/Engagement__c/fields/Accrual_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Adjustment__c</fullName>
    <description>This is the accrual that will be manually made</description>
    <inlineHelpText>This is the accrual that will be manually made</inlineHelpText>
    <label>Accrual Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>