force-app/main/default/objects/Engagement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>/**stages to EXCLUDE**/
NOT(
  OR(
  ISPICKVAL(Stage__c, &apos;Dead&apos;),
  ISPICKVAL(Stage__c, &apos;Closed&apos;),
  ISPICKVAL(Stage__c, &apos;On Hold&apos;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines whether an engagement is active for the purposes of pipeline manager, tearsheets and relationship aggregation calculations.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>