force-app/main/default/objects/Engagement__c/fields/Active_And_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Active_And_On_Hold__c</fullName>
    <formula>/**stages to EXCLUDE**/
NOT(
  OR(
  ISPICKVAL(Stage__c, &apos;Dead&apos;),
  ISPICKVAL(Stage__c, &apos;On Hold&apos;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active &amp; On Hold</label>
    <type>Checkbox</type>
</CustomField>