force-app/main/default/objects/Engagement__c/fields/Affiliated_Parties_Description__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Parties_Description__c</fullName>
    <label>Affiliated Parties Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>