force-app/main/default/objects/Engagement__c/fields/Amount_Paid_Upfront__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Upfront__c</fullName>
    <label>Amount Paid Upfront</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>