force-app/main/default/objects/Engagement__c/fields/Amount_Paid_Upon_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_Upon_Delivery__c</fullName>
    <label>Amount Paid Upon Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>