force-app/main/default/objects/Engagement__c/fields/AR_opt_out__c.field-meta.xml
<CustomField>
    <fullName>AR_opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AR Opt Out</label>
    <type>Checkbox</type>
</CustomField>