force-app/main/default/objects/Engagement__c/fields/Assets_Sold__c.field-meta.xml
<CustomField>
    <fullName>Assets_Sold__c</fullName>
    <label>Assets Sold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Synagro Technologies</fullName>
            </value>
            <value>
                <fullName>All Assets</fullName>
            </value>
            <value>
                <fullName>Operating Assets</fullName>
            </value>
            <value>
                <fullName>Consumer Notes Receivable Assets</fullName>
            </value>
            <value>
                <fullName>Telemark, Clipper, &amp; Other Assets</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Promissory Notes</fullName>
            </value>
            <value>
                <fullName>Genmar Alexandra</fullName>
            </value>
            <value>
                <fullName>Genmar Revenge</fullName>
            </value>
            <value>
                <fullName>Substantially All</fullName>
            </value>
            <value>
                <fullName>65,000,000</fullName>
            </value>
            <value>
                <fullName>US Assets</fullName>
            </value>
            <value>
                <fullName>Thailand Assets</fullName>
            </value>
            <value>
                <fullName>Intellectual Property</fullName>
            </value>
            <value>
                <fullName>Procure Chicago Holdings, LLC</fullName>
            </value>
            <value>
                <fullName>Timeshare Notes Receivable Portfolio</fullName>
            </value>
            <value>
                <fullName>Hydro Assets</fullName>
            </value>
            <value>
                <fullName>DOE Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>