force-app/main/default/objects/Engagement__c/fields/Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Authorized_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.MNPI__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements (Authorized By)</relationshipLabel>
    <relationshipName>Eng_Authorized</relationshipName>
    <type>Lookup</type>
</CustomField>