force-app/main/default/objects/Engagement__c/fields/Backlog__c.field-meta.xml
<CustomField>
    <fullName>Backlog__c</fullName>
    <formula>IF(NOT(ISBLANK(Current_Revenue_Accrual__c)),
Current_Revenue_Accrual__r.Total_Fee_USD__c,
(Latest_Revenue_Accrual__r.Total_Fee_USD__c) - PIPELINE_LTD_Accrued_Fees_USD__c)</formula>
    <label>Backlog USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>