force-app/main/default/objects/Engagement__c/fields/Backlog_LOCAL__c.field-meta.xml
<CustomField>
    <fullName>Backlog_LOCAL__c</fullName>
    <formula>Total_Fee__c - Latest_Revenue_Accrual__r.LTD_Accrued_Fees_LOCAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backlog LOCAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>