force-app/main/default/objects/Engagement__c/fields/Bill_Subject__c.field-meta.xml
<CustomField>
    <fullName>Bill_Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Subject?</label>
    <type>Checkbox</type>
</CustomField>