force-app/main/default/objects/Engagement__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements (Bill To)</relationshipLabel>
    <relationshipName>Engagements5</relationshipName>
    <type>Lookup</type>
</CustomField>