force-app/main/default/objects/Engagement__c/fields/Billed_Hourly__c.field-meta.xml
<CustomField>
    <fullName>Billed_Hourly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billed Hourly</label>
    <type>Checkbox</type>
</CustomField>