force-app/main/default/objects/Engagement__c/fields/Billing_Hold__c.field-meta.xml
<CustomField>
    <fullName>Billing_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Hold</label>
    <type>Checkbox</type>
</CustomField>