force-app/main/default/objects/Engagement__c/fields/Billing_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Hold_Date__c</fullName>
    <label>Billing Hold Date</label>
    <type>Date</type>
</CustomField>