force-app/main/default/objects/Engagement__c/fields/Bond_Price__c.field-meta.xml
<CustomField>
    <fullName>Bond_Price__c</fullName>
    <label>Bond Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>