force-app/main/default/objects/Engagement__c/fields/Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Book_Value__c</fullName>
    <description>Assigned from Engagement Summary</description>
    <label>Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>