force-app/main/default/objects/Engagement__c/fields/Break_Up__c.field-meta.xml
<CustomField>
    <fullName>Break_Up__c</fullName>
    <label>Break Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>