force-app/main/default/objects/Engagement__c/fields/BTP_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>BTP_Follow_up_Date__c</fullName>
    <label>BTP Follow-up Date</label>
    <type>Date</type>
</CustomField>