force-app/main/default/objects/Engagement__c/fields/BTP_Follow_up_Notes__c.field-meta.xml
<CustomField>
    <fullName>BTP_Follow_up_Notes__c</fullName>
    <label>BTP Follow-up Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>