force-app/main/default/objects/Engagement__c/fields/BTP_Send_by_User__c.field-meta.xml
<CustomField>
    <fullName>BTP_Send_by_User__c</fullName>
    <description>The user name of the person who clicked “Send BTP Email” button on the Engagement Summary</description>
    <inlineHelpText>The person who clicked “Send BTP Email” button on the Engagement Summary</inlineHelpText>
    <label>Sent BTP Email (User)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>