force-app/main/default/objects/Engagement__c/fields/BTP_Send_User_EmailId__c.field-meta.xml
<CustomField>
    <fullName>BTP_Send_User_EmailId__c</fullName>
    <inlineHelpText>Email Id of a user who clicked “Send BTP Email” button on the Engagement Summary</inlineHelpText>
    <label>Sent BTP Email (Email)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>