force-app/main/default/objects/Engagement__c/fields/Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Description__c</fullName>
    <label>Business Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>