force-app/main/default/objects/Engagement__c/fields/CA_Received_by_Legal__c.field-meta.xml
<CustomField>
    <fullName>CA_Received_by_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received by Legal</label>
    <type>Checkbox</type>
</CustomField>