force-app/main/default/objects/Engagement__c/fields/Capital_Raised__c.field-meta.xml
<CustomField>
    <fullName>Capital_Raised__c</fullName>
    <label>Capital Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>