force-app/main/default/objects/Engagement__c/fields/Chapter_11_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Chapter_11_Case_Number__c</fullName>
    <label>Case Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>