force-app/main/default/objects/Engagement__c/fields/Chapter_11_Emergence_Date__c.field-meta.xml
<CustomField>
    <fullName>Chapter_11_Emergence_Date__c</fullName>
    <label>Emergence Date</label>
    <type>Date</type>
</CustomField>