force-app/main/default/objects/Engagement__c/fields/Chapter_11_Fee_Info__c.field-meta.xml
<CustomField>
    <fullName>Chapter_11_Fee_Info__c</fullName>
    <label>Fee Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>