force-app/main/default/objects/Engagement__c/fields/Chapter_11_Judge__c.field-meta.xml
<CustomField>
    <fullName>Chapter_11_Judge__c</fullName>
    <label>Judge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>