force-app/main/default/objects/Engagement__c/fields/Chapter_11_Retained_in_Court__c.field-meta.xml
<CustomField>
    <fullName>Chapter_11_Retained_in_Court__c</fullName>
    <label>Retained in Court</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>