force-app/main/default/objects/Engagement__c/fields/Chapter_11_Venue__c.field-meta.xml
<CustomField>
    <fullName>Chapter_11_Venue__c</fullName>
    <label>Venue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alabama - Middle</fullName>
            </value>
            <value>
                <fullName>Alabama - Northern</fullName>
            </value>
            <value>
                <fullName>Alabama - Southern</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Arkansas - Eastern</fullName>
            </value>
            <value>
                <fullName>Arkansas - Western</fullName>
            </value>
            <value>
                <fullName>California - Central</fullName>
            </value>
            <value>
                <fullName>California - Northern</fullName>
            </value>
            <value>
                <fullName>California - Southern</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>District of Columbia</fullName>
            </value>
            <value>
                <fullName>Florida -  Northern</fullName>
            </value>
            <value>
                <fullName>Florida - Southern</fullName>
            </value>
            <value>
                <fullName>Georgia - Middle</fullName>
            </value>
            <value>
                <fullName>Georgia - Northern</fullName>
            </value>
            <value>
                <fullName>Georgia - Southern</fullName>
            </value>
            <value>
                <fullName>Guam</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Illinois - Central</fullName>
            </value>
            <value>
                <fullName>Illinois - Northern</fullName>
            </value>
            <value>
                <fullName>Illinois - Southern</fullName>
            </value>
            <value>
                <fullName>Indiana - Northern</fullName>
            </value>
            <value>
                <fullName>Indiana - Southern</fullName>
            </value>
            <value>
                <fullName>Iowa - Northern</fullName>
            </value>
            <value>
                <fullName>Iowa - Southern</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Kentucky - Eastern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>