force-app/main/default/objects/Engagement__c/fields/Client_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Client_Billing_Address__c</fullName>
    <formula>Client__r.BillingStreet  &amp; BR() &amp;
Client__r.BillingCity&amp;&quot;, &quot;&amp;Client__r.BillingState&amp;&quot; &quot;&amp;Client__r.BillingPostalCode&amp;&quot; &quot;&amp;Client__r.BillingCountry</formula>
    <label>Client Billing Address</label>
    <type>Text</type>
</CustomField>