force-app/main/default/objects/Engagement__c/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <label>Client Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>EEC</fullName>
            </value>
            <value>
                <fullName>NON EEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>