force-app/main/default/objects/Engagement__c/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <formula>Client__r.Client_Number__c</formula>
    <label>Client Number</label>
    <type>Text</type>
</CustomField>