force-app/main/default/objects/Engagement__c/fields/Client_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Client_Ownership__c</fullName>
    <label>Client Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>ESOP</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Family Owned</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Government Pension Fund</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Institutional Debt Holder</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Not for Profit</fullName>
            </value>
            <value>
                <fullName>Pension Plan</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Private Equity Group</fullName>
            </value>
            <value>
                <fullName>Public Debt</fullName>
            </value>
            <value>
                <fullName>Public Equity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>