force-app/main/default/objects/Engagement__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private Equity Fund</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>BDC</fullName>
            </value>
            <value>
                <fullName>Loan Originator</fullName>
            </value>
            <value>
                <fullName>Mortgage Originator</fullName>
            </value>
            <value>
                <fullName>Real Estate Fund</fullName>
            </value>
            <value>
                <fullName>REIT</fullName>
            </value>
            <value>
                <fullName>GSE</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
            <value>
                <fullName>Regulator</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>