force-app/main/default/objects/Engagement__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <description>This field is used to control when engagements are tabulated on the # Deals Shown and # Deals on Client/External Team fields on Relationships</description>
    <formula>ISPICKVAL(Stage__c , &apos;Closed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to control when engagements are tabulated on the # Deals Shown and # Deals on Client/External Team fields on Relationships</inlineHelpText>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>