force-app/main/default/objects/Engagement__c/fields/Closed_Deal_Memo__c.field-meta.xml
<CustomField>
    <fullName>Closed_Deal_Memo__c</fullName>
    <label>Closed Deal Memo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>