force-app/main/default/objects/Engagement__c/fields/Closed_Deal_Memo_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Deal_Memo_Date__c</fullName>
    <label>Closed Deal Memo Date</label>
    <type>Date</type>
</CustomField>