force-app/main/default/objects/Engagement__c/fields/Closing_Bid_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Bid_Due_Date__c</fullName>
    <label>Signing Date</label>
    <type>Date</type>
</CustomField>