force-app/main/default/objects/Engagement__c/fields/Closing_Bid_Weeks_From_Date_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Closing_Bid_Weeks_From_Date_Engaged__c</fullName>
    <formula>( Closing_Bid_Due_Date__c -  Date_Engaged__c ) / 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signing Date - Weeks From Date Engaged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>