force-app/main/default/objects/Engagement__c/fields/Co_Advisory_Company_2__c.field-meta.xml
<CustomField>
    <fullName>Co_Advisory_Company_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Advisory Company 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Co-Advisory Engagements 2</relationshipLabel>
    <relationshipName>EngagementsCoAdvisory2</relationshipName>
    <type>Lookup</type>
</CustomField>